set line height for question answer to ensure there is space above the answer on narrower views

--- a/src/app/question/question.component.scss
+++ b/src/app/question/question.component.scss
@@ -25,8 +25,9 @@
     margin: auto;
     text-align: center;
     max-width: 75%;
+    line-height: 30px;
     font-size: 1.8rem;
-    font-weight: bolder;
+    font-weight: 500;
     color: mat-color($mindtrails-accent, A700);
     background-color: mat-color($mindtrails-accent, A100);
     border-radius: 20px;
